k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-monitor
  namespace: default
  labels:
    app: k8s-monitor
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: k8s-monitor
